add lazy routes

--- a/src/app/dashboard/card-info/card-info.component.css
+++ b/src/app/dashboard/card-info/card-info.component.css
@@ -5,7 +5,7 @@
 }
 
 .container-label {
-  font-family: 'Trebuchet MS', Arial, sans-serif;
+  font-family: "Trebuchet MS", Arial, sans-serif;
   font-weight: bold;
   margin-left: 15px;
 }
