--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,32 +1,36 @@
 <div class="p-d-flex p-flex-column" *ngIf="!exibirSpinner">
-
   <!-- Filtros -->
   <div class="p-d-flex p-jc-center p-flex-wrap">
     <p-multiSelect
       [(ngModel)]="municipiosFilter"
       [options]="municipios"
       [group]="true"
-      [style]="{'width': '220px'}"
+      [style]="{ width: '220px' }"
       (onChange)="atualizar()"
       display="chip"
-      placeholder="Selecione o município">
+      placeholder="Selecione o município"
+    >
     </p-multiSelect>
 
-    <p-dropdown *ngIf="tipoDashboard === 'dashboard-por-ano'"
+    <p-dropdown
+      *ngIf="tipoDashboard === 'dashboard-por-ano'"
       [options]="periodoAno"
       [(ngModel)]="anoFilter"
       (onChange)="atualizar()"
-      placeholder="Ano">
+      placeholder="Ano"
+    >
     </p-dropdown>
 
-    <p-calendar *ngIf="tipoDashboard === 'dashboard-por-periodo'"
+    <p-calendar
+      *ngIf="tipoDashboard === 'dashboard-por-periodo'"
       [(ngModel)]="periodoFilter"
       [showIcon]="true"
       [readonlyInput]="true"
       (onSelect)="atualizar()"
       dateFormat="dd/mm/yy"
       placeholder="Selecione o período"
-      selectionMode="range">
+      selectionMode="range"
+    >
     </p-calendar>
   </div>
 
@@ -34,21 +38,32 @@
     <!-- Cards Quantitativos -->
     <div class="p-d-flex p-jc-center p-flex-wrap container-card">
       <div *ngFor="let dados of dadosQuantitativos">
-        <app-card-info [imagem]=dados.imagem [titulo]=dados.titulo [dado]=dados.dado></app-card-info>
+        <app-card-info
+          [imagem]="dados.imagem"
+          [titulo]="dados.titulo"
+          [dado]="dados.dado"
+        ></app-card-info>
       </div>
     </div>
 
     <!-- Cards Gráficos -->
     <div class="p-d-flex p-jc-center p-flex-wrap container-card">
       <div class="container-chart" *ngFor="let dado of dadosGraficos">
-          <app-card-chart [titulo]=dado.titulo [tipo]=dado.tipo [dataset]=dado.dados></app-card-chart>
+        <app-card-chart
+          [titulo]="dado.titulo"
+          [tipo]="dado.tipo"
+          [dataset]="dado.dados"
+        ></app-card-chart>
       </div>
     </div>
 
     <!-- Card Heatmap -->
-    <div class="p-d-flex p-jc-center p-flex-wrap container-card" *ngIf="tipoDashboard === 'dashboard-por-ano'">
+    <div
+      class="p-d-flex p-jc-center p-flex-wrap container-card"
+      *ngIf="tipoDashboard === 'dashboard-por-ano'"
+    >
       <div class="container-heatmap">
-        <app-heatmap [dados]=dadosHeatmap></app-heatmap>
+        <app-heatmap [dados]="dadosHeatmap"></app-heatmap>
       </div>
     </div>
   </div>
