--- a/src/app/incendios/incendios-pesquisa/incendios-pesquisa.component.html
+++ b/src/app/incendios/incendios-pesquisa/incendios-pesquisa.component.html
@@ -86,8 +86,6 @@
             <p pTooltip="Longitude" tooltipPosition="bottom">
               {{ incendio.longitude }}
             </p>
-
-            <!-- <b>lat: </b>{{incendio.latitude}} <br> <b>lon: </b>{{incendio.longitude}} -->
           </td>
           <td>
             <span class="p-column-title">Período</span>
@@ -192,7 +190,7 @@
         </tr>
         <tr>
           <td colspan="7">
-            <!-- <app-panel-loader [visible]="spinnerIsActive"></app-panel-loader> -->
+            <app-panel-loader [visible]="spinnerIsActive"></app-panel-loader>
           </td>
         </tr>
       </ng-template>
