--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -21,7 +21,7 @@
     </li>
 
     <li class="navbar-menuitem">
-      <a routerLink="/perfil" (click)="omitir()">
+      <a routerLink="/usuarios/perfil" (click)="omitir()">
         <i class="pi pi-user menu-icon"></i>
         <span>Perfil</span>
       </a>
