--- a/src/app/dashboard/card-info/card-info.component.html
+++ b/src/app/dashboard/card-info/card-info.component.html
@@ -1,9 +1,10 @@
-<p-card [style]="{'width': '300px', 'height': '120px', 'margin': '10px'}">
+<p-card [style]="{ width: '300px', height: '120px', margin: '10px' }">
   <div class="container-card">
-    <img src={{imagem}}/>
+    <img src="{{ imagem }}" />
     <div class="container-label">
-      <span class="label-dado">{{dado}}</span><br/>
-      {{titulo}}
+      <span class="label-dado">{{ dado }}</span
+      ><br />
+      {{ titulo }}
     </div>
   </div>
 </p-card>
