--- a/src/app/dashboard/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard/dashboard.component.css
@@ -11,7 +11,7 @@ p-calendar {
 }
 
 .container-heatmap {
-  width: 100%
+  width: 100%;
 }
 
 .container-message {
@@ -29,12 +29,12 @@ p-calendar {
   margin: 5px;
 }
 
-:host ::ng-deep .p-inline-message  {
+:host ::ng-deep .p-inline-message {
   border-left: 6px solid #d9a300;
   height: 50px;
 }
 
-@media(max-width: 950px) {
+@media (max-width: 950px) {
   .container-chart {
     width: 100%;
   }
