--- a/src/app/shared/component/date-picker/date-picker.component.html
+++ b/src/app/shared/component/date-picker/date-picker.component.html
@@ -1,7 +1,7 @@
 <p-calendar
   dateFormat="dd/mm/yy"
   placeholder="{{ placeholder }}"
-  showButtonBar="{{ buttons }}"
+  [showButtonBar]="buttons"
   showIcon="true"
   monthNavigator="true"
   yearNavigator="true"
