--- a/src/app/incendios/incendios-pesquisa/incendios-pesquisa.component.html
+++ b/src/app/incendios/incendios-pesquisa/incendios-pesquisa.component.html
@@ -190,7 +190,7 @@
         </tr>
         <tr>
           <td colspan="7">
-            <!-- <app-panel-loader [visible]="spinnerIsActive"></app-panel-loader> -->
+            <app-panel-loader [visible]="spinnerIsActive"></app-panel-loader>
           </td>
         </tr>
       </ng-template>
