--- a/src/app/usuarios/perfil/perfil.component.html
+++ b/src/app/usuarios/perfil/perfil.component.html
@@ -1,5 +1,5 @@
-<div class="p-grid p-justify-center conteudo">
-  <div class="p-col-11 p-sm-10 p-md-4">
+<div class="p-grid p-justify-center">
+  <div class="p-col-11 p-sm-10 p-md-4 conteudo">
     <h1>Perfil</h1>
 
     <p-card>
