--- a/src/app/incendios/incendios-cadastro/incendios-cadastro.component.html
+++ b/src/app/incendios/incendios-cadastro/incendios-cadastro.component.html
@@ -1,5 +1,5 @@
-<div class="p-grid p-justify-center conteudo">
-  <div class="p-col-11 p-sm-10 p-md-4">
+<div class="p-grid p-justify-center">
+  <div class="p-col-11 p-sm-10 p-md-4 conteudo">
     <div class="header-novo-incendio">
       <h1>{{ editando ? "Edição de" : "Novo" }} incêndio</h1>
 
