css link-esqueci-senha

--- a/src/app/seguranca/login/login.component.html
+++ b/src/app/seguranca/login/login.component.html
@@ -75,7 +75,7 @@
 
           <div class="esqueci-senha">
             <button
-              class="p-button-link link-esqueci-senha"
+              class="p-button-link link-esqueci-senha link"
               type="button"
               (click)="dialogIsVisible = !dialogIsVisible"
               label="Esqueci minha senha"
