--- a/src/app/incendios/incendios-pesquisa/incendios-pesquisa.component.html
+++ b/src/app/incendios/incendios-pesquisa/incendios-pesquisa.component.html
@@ -24,7 +24,7 @@
                 [initYearRange]="2000"
                 [buttons]="true"
                 name="dataIncendio"
-                [(ngModel)]="dataBuscada"
+                #dataBuscada
               ></app-date-picker>
 
               <button
