--- a/src/app/shared/component/date-picker/date-picker.component.html
+++ b/src/app/shared/component/date-picker/date-picker.component.html
@@ -7,4 +7,6 @@
   yearNavigator="true"
   yearRange="{{ initYearRange }}:{{ endYearRange }}"
   readonlyInput="true"
+  [required]="required"
+  [(ngModel)]="selectedDate"
 ></p-calendar>
