--- a/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.html
+++ b/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.html
@@ -62,10 +62,12 @@
             <label for="dataNascimento">Data de Nascimento</label>
             <app-date-picker
               id="dataNascimento"
+              [selectedDate]="usuario.birthDate"
+              [required]="true"
               name="dataNascimento"
-              [(ngModel)]="usuario.birthDate"
               #dataNascimento="ngModel"
-              required
+              ngModel
+              ngDefaultControl
             ></app-date-picker>
 
             <app-mensagem-de-erro
@@ -100,7 +102,12 @@
               type="button"
               label="Salvar"
               (click)="salvar()"
-              [disabled]="!formNovoUsuario.valid"
+              [disabled]="
+                !formNovoUsuario.valid ||
+                dataNascimento.selectedDate == undefined
+                  ? true
+                  : false
+              "
             ></button>
           </div>
         </form>
