--- a/src/app/usuarios/usuarios-nova-senha/usuarios-nova-senha.component.css
+++ b/src/app/usuarios/usuarios-nova-senha/usuarios-nova-senha.component.css
@@ -3,11 +3,15 @@
 }
 
 .card {
-  margin-top: 1rem;
+  margin-top: 1rem 0;
 }
 
 :host ::ng-deep .p-card .p-card-content {
   padding-bottom: 0;
+}
+
+:host ::ng-deep .p-card .p-card-body {
+  padding-bottom: 0.5rem;
 }
 
 .text-center {
