--- a/src/app/usuarios/usuarios-nova-senha/usuarios-nova-senha.component.html
+++ b/src/app/usuarios/usuarios-nova-senha/usuarios-nova-senha.component.html
@@ -6,7 +6,7 @@
       <div class="p-grid">
         <form autocomplete="off" class="p-col-12" #formSenhas="ngForm">
           <div class="p-field p-fluid">
-            <label for="senha">Senha</label>
+            <label for="senha">Nova Senha</label>
             <p-password
               id="senha"
               [feedback]="false"
