--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
-  <div class="container">
+  <div class="wrap">
     <div class="p-grid">
-      <div class="p-col-12">
+      <div>
         <a href="javascript:;" class="navbar-toggle" (click)="exibeMenu = true"
           ><i class="pi pi-bars" pTooltip="Menu" tooltipPosition="bottom"></i
         ></a>
